# intro-to-ai

./: .gitignore  README.md  README.rst  pyproject.toml  pytest.ini  tox.ini
src/intro/: __init__.py  __main__.py  dev-dependencies.txt
src/intro/intro_to_classes/: __main__.py
tests/: test_intro.py
