[tool.poetry]
name = "intro"
version = "0.1.0"
description = ""
authors = ["mariomui"]

[tool.poetry.dependencies]
python = "^3.7.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-watch = "^4.2.0"
black = "^22.1.0"
tox = "^3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

